2003-11-17  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (begin_insertion): keep @copying state.
	use legalnotice instead of abstract for @copying.
	(cm_insert_copying): removed redundant work arounds.

	* makeinfo/makeinfo.c (execute_string): try to keep tags balanced with
	Docbook and XML.

	* makeinfo/xml.c
	(xml_current_stack_index, xml_end_current_element): new functions.
	(xml_add_char): enclose @copying text in a quotation element with
	Docbook.

2003-11-17  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_settitle): do not automatically start bookinfo
	element after settitle.

2003-11-17  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/xml.c (xml_synindex): new function to keep track of index
	redirections.
	(xml_insert_indexterm): added a check to see if any index
	redirections are made.

	* makeinfo/index.c (cm_synindex): let xml_synindex() handle xml part.

2003-11-17  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (cm_uref):
	* makeinfo/xml.c: use ulink for @uref with Docbook.

2003-11-16  Karl Berry  <karl@gnu.org>

	* util/install-info.c: protoize.
	* util/texindex.c: protoize.
	* util/dir-example (protoize,unprotoize): add.

	* doc/texinfo.tex (\everytab): new \toks.
	(\headitem): use it to typeset in bold.
	(\item): reset it.

2003-11-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (quotation): document it.
	* doc/texinfo.tex (\quotation): accept optional argument.
	(\doquotation): new macro to test for and typeset it.

	* doc/texinfo.txi (Multitable Rows): document @headitem.

	* doc/texinfo.tex (\headitem): error by default, redefine inside
	@multitable (= \dotable).  New command suggested by Arnold.

2003-11-15  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (fatal): New function. Use it.
	(txiversion): Be robust to broken texinfo.tex.

	* doc/texinfo.txi (example): mention use of @r for annotations.

2003-11-15  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c: new command @headitem.
